--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "dotenv-webpack": "^8.0.1",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-google-streetview": "^0.0.9",
     "react-scripts": "5.0.1",
+    "source-map-loader": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
