--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-google-streetview": "^0.0.9",
     "react-scripts": "5.0.1",
     "source-map-loader": "^5.0.0",
+    "stream": "^0.0.2",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
